--- a/src/components/x/typo.css
+++ b/src/components/x/typo.css
@@ -52,7 +52,7 @@ All right reserved.
   --blockquote-border: solid .2em var(--font-color);
 
   --table-padding: .5em .75em;
-  --table-border: 1px solid #ccc;
+  --table-border: 1px solid #e4e4e4;
   --table-header-font-weight: 700;
 }
 
