--- a/src/components/x/reset.css
+++ b/src/components/x/reset.css
@@ -25,8 +25,10 @@ All right reserved.
   /* Base variables */
   --line-height: 1.5;
   --font-color: #000;
-  --font-size-coeff: 62.5%;
+  --font-size-base: 62.5%;
+  --font-scale: 1;
   --font-size: 1.6rem;
+  
   --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
                  Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
                  Segoe UI Symbol;
@@ -85,16 +87,27 @@ body {
 html {
   line-height: var(--line-height);
   font-family: var(--font-family);
-  font-size: var(--font-size-coeff);
+  font-size: calc(var(--font-size-base) * var(--font-scale));
   background-color: var(--background-color);
   font-synthesis: initial;
   text-rendering: optimizeLegibility;
-  /* -webkit-font-smoothing: antialiased; */
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: #00000000;
   -moz-font-feature-settings: 'liga', 'kern';
   color: var(--font-color);
   scroll-behavior: smooth;
+  
+  &.scale-5n { --font-scale: 0.5 }
+  &.scale-4n { --font-scale: 0.6 }
+  &.scale-3n { --font-scale: 0.7 }
+  &.scale-2n { --font-scale: 0.8 }
+  &.scale-1n { --font-scale: 0.9 }
+  &.scale-0  { --font-scale: 1   }
+  &.scale-1  { --font-scale: 1.1 }
+  &.scale-2  { --font-scale: 1.2 }
+  &.scale-3  { --font-scale: 1.3 }
+  &.scale-4  { --font-scale: 1.4 }
+  &.scale-5  { --font-scale: 1.5 }
 }
 body {
   font-size: var(--font-size);
