--- a/src/components/x/form.css
+++ b/src/components/x/form.css
@@ -6,7 +6,7 @@ All right reserved.
 ----------------------------------------*/
 
 :root {
-  --forms-width: 400px;
+  --forms-width: 40rem;
   --forms-height-coeff: 2.5;
   --forms-side-padding: 1rem;
 
