--- a/src/components/x/colors.css
+++ b/src/components/x/colors.css
@@ -11,11 +11,13 @@ All right reserved.
   .textSuccess
   .textWarning
   .textDanger
+  .textError
   
   .bgPrimary
   .bgSuccess
   .bgWarning
   .bgDanger
+  .bgError
   .bgGrey
   
   .text[ColorName] - text color (d)
@@ -28,6 +30,7 @@ All right reserved.
   --color-success: #33c433;
   --color-warning: #ff8800;
   --color-danger: #ee3333;
+  --color-error: #ee3333;
   --color-grey: #f4f4f4;
 }
 
@@ -36,10 +39,12 @@ All right reserved.
 .textSuccess { color: var(--color-success) !important }
 .textWarning { color: var(--color-warning) !important }
 .textDanger  { color: var(--color-danger) !important }
+.textError   { color: var(--color-error) !important }
 .bgPrimary   { background-color: var(--color-primary) !important }
 .bgSuccess   { background-color: var(--color-success) !important }
 .bgWarning   { background-color: var(--color-warning) !important }
 .bgDanger    { background-color: var(--color-danger) !important }
+.bgError     { background-color: var(--color-error) !important }
 .bgGrey      { background-color: var(--color-grey) !important }
 
 
