--- a/src/components/x/reset.css
+++ b/src/components/x/reset.css
@@ -28,12 +28,9 @@ All right reserved.
   --font-size-base: 62.5%;
   --font-scale: 1;
   --font-size: 1.6rem;
-  
-  --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
-                 Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
-                 Segoe UI Symbol;
-  --font-family-mono: SFMono-Regular, Consolas, Liberation Mono,
-                      Menlo, monospace;
+  --font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+                 "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family-mono: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
   --background-color: #fff;
 }
 
@@ -96,6 +93,8 @@ html {
   -moz-font-feature-settings: 'liga', 'kern';
   color: var(--font-color);
   scroll-behavior: smooth;
+  scroll-padding-top: 10vh;
+  scroll-padding-bottom: 10vh;
   
   &.scale5n { --font-scale: 0.75 }
   &.scale4n { --font-scale: 0.80 }
