--- a/src/components/x/buttons.css
+++ b/src/components/x/buttons.css
@@ -44,8 +44,11 @@ All right reserved.
   --button-font-size: var(--font-size);
   --button-transform: scale(1);
   --button-transform-hover: scale(1);
-  --button-transform-active: scale(.98);
-  --button-transform-origin: center;
+  --button-transform-active: scale(.99);
+  --button-transform-origin: center bottom;
+  --button-box-shadow: none;
+  --button-box-shadow-hover: none;
+  --button-box-shadow-active: inset 0 1px 1px #0002;
   
   /*
     Additional variables and their default values:
@@ -92,6 +95,7 @@ All right reserved.
   transform-origin: var(--button-transform-origin);
   user-select: none;
   appearance: none;
+  box-shadow: var(--button-box-shadow);
   
   &:link,
   &:visited {
@@ -108,6 +112,7 @@ All right reserved.
       color: var(--button-font-color-hover, var(--button-font-color));
       background-color: var(--button-color-hover, color(from var(--button-color) display-p3 calc(r - 0.05) calc(g - 0.05) calc(b - 0.05)));
       transform: var(--button-transform-hover);
+      box-shadow: var(--button-box-shadow-hover);
     }
   }
   
@@ -117,6 +122,7 @@ All right reserved.
     color: var(--button-font-color-active, var(--button-font-color));
     background-color: var(--button-color-active, color(from var(--button-color) display-p3 calc(r - 0.05) calc(g - 0.05) calc(b - 0.05)));
     transform: var(--button-transform-active);
+    box-shadow: var(--button-box-shadow-active);
   }
 
   &[disabled],
@@ -187,4 +193,23 @@ All right reserved.
 .button_black {
   --button-color: #111;
   --button-font-color: #fff;
+}
+
+.button_tabs {
+  display: flex;
+  gap: calc(var(--space-1) / 2);
+  
+  .button {
+    border-radius: 0;
+    
+    &:first-child {
+      border-top-left-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
+      border-bottom-left-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
+    }
+    
+    &:last-child {
+      border-top-right-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
+      border-bottom-right-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
+    }
+  }
 }
