--- a/src/components/x/debug.css
+++ b/src/components/x/debug.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-debug.css
-x | Debug styles (only for CMS)
-Created by Andrey Shpigunov at 20.01.2025
+debug.css / x
+Debug styles (only for CMS)
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
