--- a/src/components/x/grid.css
+++ b/src/components/x/grid.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-grid.css
-x | Grid prototype
-Created by Andrey Shpigunov at 20.01.2025
+grid.css / x
+Grid prototype
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
