--- a/src/components/x/links.css
+++ b/src/components/x/links.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-links.css
-x | Links
-Created by Andrey Shpigunov at 12.02.2025
+links.css / x
+Links
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
