--- a/src/components/x/sticky.css
+++ b/src/components/x/sticky.css
@@ -1,10 +1,10 @@
 /*----------------------------------------
-sticky.css
-x | Sticky
-Created by Andrey Shpigunov at 12.02.2025
+sticky.css / x
+Sticky
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
-
 
 
 /* !- Sticky */
