--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,9 +1,10 @@
-/*---------------------------
-docs.css
-auto
+/*----------------------------------------
+app.css / x
+App styles
 
-Created by andreyshpigunov on 25.05.2021.
----------------------------*/
+Created by Andrey Shpigunov at 20.03.2025
+All right reserved.
+----------------------------------------*/
 
 
 @import "./x.css";
