--- a/src/components/x/buttons.css
+++ b/src/components/x/buttons.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-buttons.css
-x | Buttons
-Created by Andrey Shpigunov at 20.01.2025
+buttons.css / x
+Buttons
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
