--- a/src/components/x/colors.css
+++ b/src/components/x/colors.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-colors.css
-x | Colors from https://147colors.com
-Created by Andrey Shpigunov at 14.02.2025
+colors.css / x
+Colors from https://147colors.com
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
