--- a/src/components/x/flex.css
+++ b/src/components/x/flex.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-flex.css
-x | Flexbox
-Created by Andrey Shpigunov at 20.01.2025
+flex.css / x
+Flexbox
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
