--- a/src/components/x/flow.css
+++ b/src/components/x/flow.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-flow.css
-x | Flow — vertical flow of elements with margin-bottom space
-Created by Andrey Shpigunov at 20.01.2025
+flow.css / x
+Flow — vertical flow of elements with margin-bottom space
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
