--- a/src/components/x/form.css
+++ b/src/components/x/form.css
@@ -1,9 +1,11 @@
 /*----------------------------------------
-form.css
-x | Form default styles
-Created by Andrey Shpigunov at 20.01.2025
+form.css / x
+Form default styles
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
+
 
 :root {
   --forms-width: 40rem;
