--- a/src/components/x/helpers.css
+++ b/src/components/x/helpers.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-helpers.css
-x | Helpers
-Created by Andrey Shpigunov at 12.02.2025
+helpers.css / x
+Helpers
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
@@ -109,16 +110,16 @@ All right reserved.
 :root {
   --container-max-width: 160rem;
   
-  --shadow-1:  0px 2px 6px #00000010;
-  --shadow-2:  0px 2px 6px #00000020;
-  --shadow-3:  0px 2px 6px #00000030;
-  --shadow-4:  1px 3px 12px #00000010;
-  --shadow-5:  1px 3px 12px #00000020;
-  --shadow-6:  1px 3px 12px #00000030;
-  --shadow-7:  2px 4px 20px #00000010;
-  --shadow-8:  2px 4px 20px #00000020;
-  --shadow-9:  2px 4px 20px #00000030;
-  --shadow-10: 2px 4px 24px #00000040;
+  --shadow-1:  0 2px 4px #00000018;
+  --shadow-2:  0 4px 8px #00000018;
+  --shadow-3:  0 6px 12px #00000018;
+  --shadow-4:  0 8px 16px #00000018;
+  --shadow-5:  0 10px 20px #00000018;
+  --shadow-6:  0 12px 24px #00000018;
+  --shadow-7:  0 14px 28px #00000018;
+  --shadow-8:  0 16px 32px #00000018;
+  --shadow-9:  0 18px 36px #00000018;
+  --shadow-10: 0 20px 40px #00000018;
 }
 
 
