--- a/src/components/x/icons.css
+++ b/src/components/x/icons.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-icons.css
-x | Icons
-Created by Andrey Shpigunov at 13.02.2025
+icons.css / x
+Icons
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
