--- a/src/components/x/modal.css
+++ b/src/components/x/modal.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-modal.css
-x | Modal windows
-Created by Andrey Shpigunov at 12.02.2025
+modal.css / x
+Modal windows
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
