--- a/src/components/x/reset.css
+++ b/src/components/x/reset.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-reset.css
-x | Reset CSS
-Created by Andrey Shpigunov at 12.02.2025
+reset.css / x
+Reset CSS
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
