--- a/src/components/x/scroll.css
+++ b/src/components/x/scroll.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-scroll.css
-x | Scroll
-Created by Andrey Shpigunov at 12.02.2025
+scroll.css / x
+Scroll
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
