--- a/src/components/x/sheets.css
+++ b/src/components/x/sheets.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-sheets.css
-x | Sheets
-Created by Andrey Shpigunov at 12.02.2025
+sheets.css / x
+Sheets
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
