--- a/src/components/x/slides.css
+++ b/src/components/x/slides.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-slides.css
-x | Slides
-Created by Andrey Shpigunov at 12.02.2025
+slides.css / x
+Slides
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
