--- a/src/components/x/typo.css
+++ b/src/components/x/typo.css
@@ -1,7 +1,8 @@
 /*----------------------------------------
-typo.css
-x | Typography
-Created by Andrey Shpigunov at 12.02.2025
+typo.css / x
+Typography
+
+Created by Andrey Shpigunov at 20.03.2025
 All right reserved.
 ----------------------------------------*/
 
