--- a/src/components/x/links.css
+++ b/src/components/x/links.css
@@ -24,7 +24,7 @@ All right reserved.
 
 
 :root {
-  --link-color: #0060bb;
+  --link-color: #0060cc;
   --link-decoration-line: underline;
   --link-decoration-style: solid;
   
