--- a/src/components/x/buttons.css
+++ b/src/components/x/buttons.css
@@ -200,17 +200,17 @@ All right reserved.
   display: flex;
   gap: calc(var(--space-1) / 2);
   
-  .button {
+  & .button {
     border-radius: 0;
-    
-    &:first-child {
-      border-top-left-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
-      border-bottom-left-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
-    }
-    
-    &:last-child {
-      border-top-right-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
-      border-bottom-right-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
-    }
+  }
+  
+  & .button:nth-child(1 of .button:not(.hidden)) {
+    border-top-left-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
+    border-bottom-left-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
+  }
+  
+  & .button:nth-last-child(1 of .button:not(.hidden)) {
+    border-top-right-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
+    border-bottom-right-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
   }
 }
