--- a/src/components/x/debug.css
+++ b/src/components/x/debug.css
@@ -12,7 +12,7 @@ All right reserved.
   z-index: 999999999999;
   inset: 0;
   padding: 4vw;
-  background: #00000022;
+  background: #000d;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   overscroll-behavior: contain;
